Added new topics about collections

--- a/c#practice_app/c#practice_app.csproj
+++ b/c#practice_app/c#practice_app.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="AllTopics\Collections\Queue\" />
+    <Folder Include="AllTopics\Collections\Stack\" />
+    <Folder Include="AllTopics\Multithreadings\" />
+  </ItemGroup>
+
 </Project>
